# Django-mini-project-main

./: Makefile  README.md  create_superuser.py  manage.py  pyproject.toml
adminpanel/: forms.py  urls.py  views.py
adminpanel/templates/adminpanel/: base.html  category_form.html  category_list.html  index.html  product_form.html  product_list.html  salesorder_form.html  salesorder_list.html  user_form.html  user_list.html
analytics/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
frontend/: forms.py  urls.py  views.py
frontend/templates/frontend/: analytics.html  base.html  create_order.html  create_product.html  create_trading_order.html  create_transaction.html  index.html  list_trading_orders.html  list_transactions.html  login.html  order_detail.html  order_list.html  product_list.html  register.html  trading_order_detail.html  update_product.html
media/reports/: analytics_20250223_090543_b71e7f.csv  analytics_report_20250223_084115.csv  report_20250223_090441_1fdfafbf.csv
products/: admin.py  models.py  serializers.py  urls.py  views.py
sales/: admin.py  models.py  serializers.py  urls.py  views.py
sales_and_trading/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
trading/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
utils/: pdf_utils.py
