[tool.poetry]
name = "sales-trading-app"
version = "0.1.0"
description = ""
authors = ["Ramazan Syrlybay <syrlybai056@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.6"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.4.0"
drf-yasg = "^1.21.8"
psycopg2-binary = "^2.9.10"
pillow = "^11.1.0"
celery = "^5.4.0"
redis = "^5.2.1"
weasyprint = "^64.1"
pypdf2 = "^3.0.1"
gunicorn = "^23.0.0"
whitenoise = "^6.9.0"
django-crispy-forms = "^2.3"
crispy-bootstrap4 = "^2024.10"
django-redis = "^5.4.0"
sentry-sdk = "^2.22.0"
django-environ = "^0.12.0"
oauth2-provider = "^0.0"
django-oauth-toolkit = "^3.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
bandit = "^1.7.6"
mypy = "^1.8.0"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
